--- a/Plachtovac/Client/wwwroot/index.html
+++ b/Plachtovac/Client/wwwroot/index.html
@@ -18,7 +18,8 @@
     <link href="_content/Blazorise.Material/blazorise.material.css" rel="stylesheet" />
     <link href="_content/Blazor.ContextMenu/blazorContextMenu.min.css" rel="stylesheet" />
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet" media="all"/>
+    <link href="css/print.css" rel="stylesheet" media="print" />
 
     <link href="manifest.json" rel="manifest" />
 </head>
