--- a/Plachtovac/Client/wwwroot/index.html
+++ b/Plachtovac/Client/wwwroot/index.html
@@ -44,9 +44,6 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.webassembly.js"></script>
-    <!-- inside of body section and after the <app> tag  -->
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -63,6 +60,12 @@
     <script src="FabricJSBindings.js"></script>
 
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+
+    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script>
+        Blazor.start();
+    </script>
+
 </body>
 
 </html>
