--- a/Plachtovac/Client/wwwroot/index.html
+++ b/Plachtovac/Client/wwwroot/index.html
@@ -55,6 +55,8 @@
     <script src="_content/Blazorise/blazorise.js"></script>
     <script src="_content/Blazorise.Material/blazorise.material.js"></script>
     <script src="_content/Blazor.ContextMenu/blazorContextMenu.min.js"></script>
+    <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
+
 
     <script src="helpers.js"></script>
     <script src="FabricJSBindings.js"></script>
