--- a/Plachtovac/Client/wwwroot/404.html
+++ b/Plachtovac/Client/wwwroot/404.html
@@ -2,7 +2,7 @@
     const fullPath = window.location.pathname.split("/");
     const path = fullPath.slice(2).join("/");
     localStorage.setItem('path', path+window.location.search+window.location.hash);
-    localStorage.setItem('path_backup', path+window.location.search+window.location.hash);
-     localStorage.setItem('path_fullUrl', window.location);
+    //localStorage.setItem('path_backup', path+window.location.search+window.location.hash);
+    //localStorage.setItem('path_fullUrl', window.location);
     window.location.href = fullPath.slice(0, 2).join("/");
 </script>
