--- a/Plachtovac/Client/wwwroot/index.html
+++ b/Plachtovac/Client/wwwroot/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Plachtovač</title>
     <base href="/" />
 
@@ -21,6 +22,10 @@
     <link href="css/site.css" rel="stylesheet" media="all" />
     <link href="css/print.css" rel="stylesheet" media="print" />
     <link href="Plachtovac.Client.styles.css" rel="stylesheet" />
+
+    <meta name="apple-mobile-web-app-status-bar" content="#ecf0f1">
+    <meta name="theme-color" content="#2980b9">
+
     <link href="manifest.json" rel="manifest" />
 </head>
 
@@ -62,6 +67,8 @@
     <script src="FabricJSBindings.js"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
+
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 
 </body>
 
