--- a/Plachtovac/Client/wwwroot/index.html
+++ b/Plachtovac/Client/wwwroot/index.html
@@ -68,7 +68,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
 
-    <script>navigator.serviceWorker.register('service-worker.published.js');</script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 
 </body>
 
